# CRM_Newsletter_Xero

./: .gitignore  .replit  app.py  pyproject.toml  replit.md  start.sh
.agents/memory/: MEMORY.md  frontend-deps-install-location.md  git-writes-blocked-and-backup-recovery.md
attached_assets/: Pasted--DOCTYPE-html-html-class-light-lang-en-head-meta-charse_1780314203945.txt  Pasted--DOCTYPE-html-html-class-light-lang-en-head-meta-charse_1780314217753.txt  Pasted-Build-a-full-stack-AI-chatbot-application-with-the-foll_1776078979300.txt  Pasted-cat-home-claude-preddi-frontend-src-components-MessageI_1780488653860.txt  Pasted-import-useState-from-react-import-useNavigate-from-reac_1780488527953.txt  Pasted-import-useState-from-react-import-useNavigate-from-reac_1780488574263.txt  Pasted-import-useState-useRef-useCallback-useEffect-from-react_1780488697147.txt  pai_crm_app_(1)_1780487479986.html
backend/: requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/models/: __init__.py  chat_history.py  session.py  user.py
backend/app/repositories/: __init__.py  chat_repository.py  session_repository.py  user_repository.py
backend/app/routes/: __init__.py  auth_routes.py  chat_routes.py  session_routes.py  user_routes.py
backend/tests/: conftest.py  test_auth_service.py  test_chat_service.py  test_n8n_service.py  test_session_service.py  test_summarisation_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
static/css/: style.css
static/js/: chat.js
templates/: index.html
(+21 files in other folders)
