[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.3.0",
    "flask>=3.1.2",
    "gunicorn>=25.0.3",
    "markdown>=3.10.2",
    "openai>=2.18.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "werkzeug>=3.1.5",
]
