[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Preddi - AI Chat Agent Interface"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=4.0.0",
    "psycopg2-binary>=2.9.11",
    "gunicorn>=25.0.3",
    "markdown>=3.10.2",
    "openai>=2.18.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "werkzeug>=3.1.5",
    "pytest>=9.0.3",
    "pytest-flask>=1.3.0",
]
